--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
                     <div class="navSearchContainer">
                       <div class="navCityContainer">
                         <div class="form-group">
-                          <input type="text" class="form-control" id="navLocation" name="navLocation" placeholder="Where To?" required />
+                          <input type="text" class="form-control" id="navLocation" name="navLocation" placeholder="Find An Event" required />
                           <span id="error" class="hiddenError error">All Fields Need Values</span>
                         </div>
                       </div>
@@ -64,7 +64,7 @@
                         <div class="navMobileSearchContainer">
                           <div class="navMobileCityContainer">
                             <div class="form-group">
-                              <input type="text" class="form-control" id="nav_mobile_Location" name="navLocation" placeholder="Where?" required />
+                              <input type="text" class="form-control" id="nav_mobile_Location" name="navLocation" placeholder="Find An Event" required />
                             </div>
                           </div>
                           <div class="navMobileDateFrom">
