--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -158,7 +158,7 @@
             <input type="text" data-enable-time="true" data-no-calendar="true" value="17:00" class="form-control flatpickr" id="time" name="time"  />
           </div>
           <div class="form-group">
-            <label for="guest_limit">Number Of Guests</label>
+            <label for="guest_limit">Maximum Guest Limit</label>
             <input type="text" class="form-control" id="guest_limit" name="guest_limit"  />
           </div>
           <div class="form-group">
