--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -8,7 +8,7 @@
       <div class="searchContainer">
         <div class="cityContainer">
           <div class="form-group">
-            <input type="text" class="form-control" id="location" name="location" placeholder="Where Do You Want To Search?" required />
+            <input type="text" class="form-control" id="location" name="location" placeholder="Find An Event" required />
           </div>
         </div>
         <div class="dateFrom">
