--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -35,7 +35,8 @@
 <div class="container info_container">
   <div class="row">
     <div class="col-xs-12 text-center">
-      <h1>What Is Salt?</h1>
+      <h1>What Is Salt-Up?</h1>
+      <h4>Salt-Up is a platform for bringing communities together through free home-cooked meals.</h4>
     </div>
   </div>
   <div class="row">
@@ -43,21 +44,21 @@
       <i class="fa fa-search info_img" aria-hidden="true"></i>
       <h3>Search Events</h3>
       <div class="info_text">
-        Check out local events being hosted by people just like you!
+        Search local events being hosted by people just like you!
       </div>
     </div>
     <div class="col-xs-12 col-sm-4 salt_info text-center">
       <i class="fa fa-pencil-square-o info_img info_img_pencil" aria-hidden="true"></i>
       <h3>Apply</h3>
       <div class="info_text">
-         Request a seat at an event and get speedy approval.
+         Submit your event application and get speedy approval.
       </div>
     </div>
     <div class="col-xs-12 col-sm-4 salt_info text-center">
       <i class="fa fa-glass info_img" aria-hidden="true"></i>
       <h3>Bon Appétit</h3>
       <div class="info_text">
-        Enjoy your meal and think about hosting an event yourself!
+        Enjoy your meal while meeting new people and consider hosting an event yourself!
       </div>
     </div>
   </div>
