--- a/public/css/events/index.css
+++ b/public/css/events/index.css
@@ -138,6 +138,7 @@ body {
   display: inline-block;
   margin: 0;
   margin-top: 5px;
+  margin-right: 5px;
 }
 
 .eventContainer .descContainer .eventDescContainer .event_spots_left {
