--- a/public/css/events/index.scss
+++ b/public/css/events/index.scss
@@ -115,6 +115,7 @@ body {
         display: inline-block;
         margin: 0;
         margin-top: 5px;
+        margin-right: 5px;
       }
       .event_spots_left {
         display: inline-block;
