changed comment names to white

--- a/public/css/events/show.scss
+++ b/public/css/events/show.scss
@@ -240,7 +240,7 @@ body {
     margin: 10px 0;
   }
   .commentUserName {
-    color: black;
+    color: white;
   }
   .panel-heading {
     background-color: black;
