--- a/app/views/application_status_change_mailer/application_rejected_email.html.erb
+++ b/app/views/application_status_change_mailer/application_rejected_email.html.erb
@@ -1,8 +1,8 @@
 <h2><%= @application.user.first_name %></h2>
-<p>Unfortunately, your request to join the Salt event, <%= @application.event.title %>, has not been approved.</p>
-<p>Feel free to check out other events on www.salt.com. Likewise, you might take a look at our suggestions for optimizing your profile and improving your chances of being approved for events.
+<p>Unfortunately, your request to join the Salt-Up event, <%= @application.event.title %>, has not been approved.</p>
+<p>Feel free to check out other events on www.salt-up.com. Likewise, you might take a look at our suggestions for optimizing your profile and improving your chances of being approved for events.
 </p>
-<h3>We hope that you keep applying and continue to use Salt to meet someone different.</h3>
+<h3>We hope that you keep applying and continue to use Salt-Up to meet someone different.</h3>
 <h4>Regards,</h>
-<h4><i>The Salt Staff</i></h4>
+<h4><i>The Salt-Up Staff</i></h4>
 <img src="http://www.salt-up.com/assets/salticon.png" style="width: 100px;"/>
