--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -251,7 +251,7 @@
               </div>
               <div class="form-group">
                 <label for="images_files">Event Image</label>
-                <input type="file" class="form-control" name="images_files" id="images_filesHeader" multiple />
+                <input type="file" class="form-control" name="images_files" id="images_filesHeader" multiple accept="image/*" />
               </div>
               <div class="form-group">
                 <label for="date">Event Date</label>
