only can upload images now

--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -33,7 +33,7 @@
           </div>
           <div class="form-group">
             <label for="images_files_profile">Profile Image</label>
-            <input type="file" class="form-control" name="images_files_profile" id="images_files_profile" />
+            <input type="file" class="form-control" name="images_files_profile" id="images_files_profile" accept="image/*" />
           </div>
           <div class="form-group">
             <label for="phone">Phone Number <span class="text-muted">(XXX-XXX-XXXX)</span></label>
@@ -147,7 +147,7 @@
           </div>
           <div class="form-group">
             <label for="images_files">Event Image</label>
-            <input type="file" class="form-control" name="images_files" id="images_files" multiple />
+            <input type="file" class="form-control" name="images_files" id="images_files" multiple accept="image/*" />
           </div>
           <div class="form-group">
             <label for="date">Event Date</label>
