fixed attending with flexbox

--- a/public/css/dashboard/dashboard.css
+++ b/public/css/dashboard/dashboard.css
@@ -254,6 +254,92 @@ body {
   font-size: 12px;
 }
 
+.attendingEventsContainer {
+  border: 1px solid black;
+  border-radius: 5px;
+}
+
+.attendingEventsContainer .attendingEventsHeaderContainer {
+  display: flex;
+  flex-direction: row;
+  background-color: black;
+  color: white;
+  padding: 5px;
+}
+
+.attendingEventsContainer .attendingEventsHeaderContainer .titleHeader {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.attendingEventsContainer .attendingEventsHeaderContainer .whenHeader {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.attendingEventsContainer .attendingEventsHeaderContainer .spotsHeader {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.attendingEventsContainer .attendingEventsHeaderContainer .approvedHeader {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.attendingEventsContainer .attendingEventsBody {
+  display: flex;
+  flex-direction: row;
+  border-top: 1px solid black;
+}
+
+.attendingEventsContainer .attendingEventsBody .attendingEventHeader {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.attendingEventsContainer .attendingEventsBody .attendingEventHeader a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 12px;
+}
+
+.attendingEventsContainer .attendingEventsBody .attendingEventDate {
+  font-size: 12px;
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.attendingEventsContainer .attendingEventsBody .attendingEventSpots {
+  font-size: 12px;
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.attendingEventsContainer .attendingEventsBody .attendingEventStatus {
+  font-size: 12px;
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .conversationContainer {
   display: flex;
   flex-direction: column;
