changed types to date

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,7 @@
                       </div>
                       <div class="navDateFrom">
                         <div class="form-group">
-                          <input type="text" class="form-control flatpickr" data-date-format="m-d-Y" id="nav_starting_date" name="nav_starting_date" placeholder="From" required />
+                          <input type="date" class="form-control flatpickr" data-date-format="m-d-Y" id="nav_starting_date" name="nav_starting_date" placeholder="From" required />
                         </div>
                       </div>
                       <div class="navArrowContainer">
@@ -45,7 +45,7 @@
                       </div>
                       <div class="navDateTo">
                         <div class="form-group">
-                          <input type="text" class="form-control flatpickr" data-date-format="m-d-Y" id="nav_ending_date" name="nav_ending_date" placeholder="To" required />
+                          <input type="date" class="form-control flatpickr" data-date-format="m-d-Y" id="nav_ending_date" name="nav_ending_date" placeholder="To" required />
                         </div>
                       </div>
                       <div class="navButtonContainer center-block">
@@ -69,12 +69,12 @@
                           </div>
                           <div class="navMobileDateFrom">
                             <div class="form-group">
-                              <input type="text" class="form-control flatpickr" data-date-format="m-d-Y" id="nav_mobile_starting_date" name="nav_starting_date" placeholder="From" required />
+                              <input type="date" class="form-control flatpickr" data-date-format="m-d-Y" id="nav_mobile_starting_date" name="nav_starting_date" placeholder="From" required />
                             </div>
                           </div>
                           <div class="navMobileDateTo">
                             <div class="form-group">
-                              <input type="text" class="form-control flatpickr" data-date-format="m-d-Y" id="nav_mobile_ending_date" name="nav_ending_date" placeholder="To" required />
+                              <input type="date" class="form-control flatpickr" data-date-format="m-d-Y" id="nav_mobile_ending_date" name="nav_ending_date" placeholder="To" required />
                             </div>
                           </div>
                           <div class="navMobileButtonContainer center-block">
@@ -182,7 +182,7 @@
               </div>
               <div class="form-group">
                 <label for="sign_up_birth">Date of Birth <span class="text-muted">(MM/DD/YYYY)</span></label>
-                <input type="text" class="form-control" id="sign_up_birth" name="sign_up_birth" required />
+                <input type="date" class="form-control" id="sign_up_birth" name="sign_up_birth" required />
               </div>
               <div class="form-group">
                 <label for="sign_up_password">Password <span class="text-muted">(Minimum of 6 Characters)</span></label>
@@ -255,7 +255,7 @@
               </div>
               <div class="form-group">
                 <label for="date">Event Date</label>
-                <input type="text" class="form-control flatpickr" id="dateHeader" name="date" data-date-format="d-m-Y" />
+                <input type="date" class="form-control flatpickr" id="dateHeader" name="date" data-date-format="d-m-Y" />
               </div>
               <div class="form-group">
                 <label for="time">Event Time</label>
