--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -22,7 +22,7 @@
           </div>
           <div class="form-group">
             <label for="date">Event Date</label>
-            <input type="text" class="form-control flatpickr" id="date" value="<%= @event.date %>" name="date" data-date-format="d-m-Y" />
+            <input type="date" class="form-control flatpickr" id="date" value="<%= @event.date %>" name="date" data-date-format="d-m-Y" />
           </div>
           <div class="form-group">
             <label for="time">Event Time</label>
