--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -29,7 +29,7 @@
           </div>
           <div class="form-group">
             <label for="date_of_birth">Date Of Birth <span class="text-muted">(MM/DD/YYYY)</span></label>
-            <input type="date" class="form-control" value="<%= @user.date_of_birth.strftime('%m/%d/%Y') %>" id="date_of_birth" name="date_of_birth"  />
+            <input type="text" class="form-control" value="<%= @user.date_of_birth.strftime('%m/%d/%Y') %>" id="date_of_birth" name="date_of_birth"  />
           </div>
           <div class="form-group">
             <label for="images_files_profile">Profile Image</label>
@@ -151,7 +151,7 @@
           </div>
           <div class="form-group">
             <label for="date">Event Date</label>
-            <input type="date" class="form-control flatpickr" id="date" name="date" data-date-format="d-m-Y" />
+            <input type="text" class="form-control flatpickr" id="date" name="date" data-date-format="d-m-Y" />
           </div>
           <div class="form-group">
             <label for="time">Event Time</label>
