--- a/public/css/dashboard/dashboard.scss
+++ b/public/css/dashboard/dashboard.scss
@@ -144,6 +144,9 @@ body {
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        img {
+          max-width: 50px;
+        }
       }
     }
     .votesContainer {
@@ -254,6 +257,7 @@ body {
     display: flex;
     flex-direction: row;
     border-top: 1px solid black;
+    padding: 5px;
     .attendingEventHeader {
       flex: 1;
       display: flex;
@@ -264,6 +268,10 @@ body {
         align-items: center;
         justify-content: center;
         font-size: 12px;
+        img {
+          max-width: 50px;
+          margin-right: 10px;
+        }
       }
     }
     .attendingEventDate {
