--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -377,7 +377,7 @@
     </div>
 
     <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-57c73178fe93fb3a"></script>
-    <script type="text/javascript" src="/js/fetch.js"></script>
+    <script src="https://cdn.polyfill.io/v2/polyfill.js?features=default,fetch"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script src="/js/config.js"></script>
