bundled all the files

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -385,7 +385,7 @@
     <script src="/js/flatpickr.min.js"></script>
     <script src="/js/handleerrors.js"></script>
     <script src="/js/signUpLogin.js"></script>
-    <script src="/js/header/search.js"></script>
+    <script src="/js/search.bundle.js"></script>
     <%= yield :scripts %>
   </body>
 </html>
