--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -65,5 +65,5 @@
 </div>
 
 <% content_for :scripts do %>
-  <script src="/js/welcome/welcome.js"></script>
+  <script src="/js/welcome.bundle.js"></script>
 <% end %>
