fixed responsive issues

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -24,7 +24,7 @@
             <input type="text" class="form-control flatpickr" data-date-format="m-d-Y" id="index_date_to" name="ending_date" placeholder="To" data-allow-input=true required />
           </div>
         </div>
-        <div class="buttonContainer center-block">
+        <div class="buttonContainer">
           <button type="button" class="btn" id="submitIndexSearch">Search</button>
         </div>
       </div>
