--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -162,6 +162,7 @@
 
 
 <% content_for :scripts do %>
+  <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-57c73178fe93fb3a"></script>
   <script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
   <script src="//maps.google.com/maps/api/js?v=3.23&key=<%= gkey %>"></script>
   <script src="//cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js"></script>
