--- a/public/css/welcome/index.scss
+++ b/public/css/welcome/index.scss
@@ -67,6 +67,7 @@ header {
     height: 45px;
     margin-bottom: 20px;
     input {
+      width: 100%;
       border-radius: 5px;
       border: 2px solid black;
     }
@@ -92,6 +93,7 @@ header {
     height: 45px;
     margin-bottom: 20px;
     input {
+      width: 100%;
       border: 2px solid black;
       border-radius: 5px;
     }
@@ -105,6 +107,9 @@ header {
   .buttonContainer {
     flex: 1;
     height: 45px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     button {
       height: 45px;
       background-color: black;
