fixed search bar on mobile

--- a/public/css/welcome/index.css
+++ b/public/css/welcome/index.css
@@ -242,6 +242,7 @@ header {
   }
   .searchContainer .buttonContainer {
     margin-bottom: 0px;
+    justify-content: flex-start;
   }
   .searchContainer .buttonContainer button {
     color: white;
