--- a/public/css/dashboard/dashboard.css
+++ b/public/css/dashboard/dashboard.css
@@ -190,6 +190,10 @@ body {
   padding: 1px;
 }
 
+.hostingEventContainer .applicationSingleContainer .votesContainer .thumbVotesNumber {
+  margin-left: 3px;
+}
+
 .hostingEventContainer .applicationSingleContainer .applicationSingleQuantityContainer {
   flex: 1;
   display: flex;
@@ -241,7 +245,7 @@ body {
 }
 
 .hostingEventContainer .messageHeader {
-  flex: 3;
+  flex: 2.5;
   display: flex;
   align-items: center;
   padding: 1px;
