--- a/public/css/dashboard/dashboard.scss
+++ b/public/css/dashboard/dashboard.scss
@@ -158,6 +158,9 @@ body {
       justify-content: center;
       font-size: 12px;
       padding: 1px;
+      .thumbVotesNumber {
+        margin-left: 3px;
+      }
     }
     .applicationSingleQuantityContainer {
       flex: 1;
@@ -205,7 +208,7 @@ body {
     padding: 1px;
   }
   .messageHeader {
-    flex: 3;
+    flex: 2.5;
     display: flex;
     align-items: center;
     padding: 1px;
